--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -2,8 +2,15 @@ name: Tests
 
 on: [push,pull_request]
 
+
+
 jobs:
+  random:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: ./.github/actions/random
   phpunit:
+    needs: random
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
